<resources>
    <string name="app_name">Feastly Fling</string>
    <string name="your_craving_delivered">Your craving, delivered</string>
    <string name="degsined_by_nmaliyka_manahil"><![CDATA[Degsined by\nMaliyka & Manahil]]></string>
    <string name="feastly_fling">Feastly Fling</string>
    <string name="next">Next</string>
    <string name="your_next_great_meal_is_njust_a_tap_away">Your next great meal is\njust a tap away</string>
    <string name="degsined_by_nmaliyka_manahi"><![CDATA[Degsined by\nMaliyka & Manahil]]></string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already Have An Account</string>
    <string name="button">Button</string>
    <string name="create_account">Create Account</string>
    <string name="don_t_have_an_account">Don\'t Have An Account</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="choose_location">Choose Location</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore_your_favorite_food">Explore Your Favorite Food</string>
</resources>