<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/foodName"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="5dp"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/lato"
        android:text="@string/degsined_by_nmaliyka_manahil"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NotHaveButton" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:text="@string/your_craving_delivered"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/yeon_sung"
        android:text="@string/feastly_fling"
        android:textColor="@color/text_color"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/logintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/lato_bold"
        android:text="Login To Yout Account"
        android:textColor="@color/design_default_color_error"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/LoginPassword"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittextshape"
        android:drawableLeft="@drawable/lock_01"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="@+id/LoginEmail"
        app:layout_constraintStart_toStartOf="@+id/LoginEmail"
        app:layout_constraintTop_toBottomOf="@+id/LoginEmail" />

    <EditText
        android:id="@+id/LoginEmail"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittextshape"
        android:drawableLeft="@drawable/mail_02"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:hint="Email or Phone Number"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="@+id/logintext"
        app:layout_constraintStart_toStartOf="@+id/logintext"
        app:layout_constraintTop_toBottomOf="@+id/logintext" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Or"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/LoginPassword"
        app:layout_constraintStart_toStartOf="@+id/LoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/LoginPassword" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/yeon_sung"
        android:text="Continue With"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/whitebutton"
        android:drawableLeft="@drawable/facebook_3_1"
        android:paddingLeft="15dp"
        android:text="@string/facebook"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/whitebutton"
        android:drawableLeft="@drawable/google_icon_1"
        android:paddingLeft="15dp"
        android:text="@string/google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/LoginButton"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/redbuttongradient"
        android:fontFamily="@font/yeon_sung"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_goneMarginTop="16dp" />

    <TextView
        android:id="@+id/NotHaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/lato"
        android:text="@string/don_t_have_an_account"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>